--- a/webdeva2/index.html
+++ b/webdeva2/index.html
@@ -19,16 +19,18 @@
         <ul>
             <li><a href="#" id="types-link">Types and Varieties</a></li>
             <li><a href="#" id="what-link">What are Potato Chips</a></li>
-            <li><a href="#" id="game-link">Game</a></li>
+            <li><a href="#" id="history-link">Game</a></li>
         </ul>
     </nav>
     <div id="main-container">
-        <main id="types" class="main-section">
+        <section id="types" class="main-section">
+            <h2>.</h2>
             <section class="intro">
-                <h2>Different types of Potato Chips</h2>
+                <h3>Different types of Potato Chips</h3>
                 <p>Learn more about the variety of Potato Chips in the world</p>
             </section>
             <section class="image-circles">
+                <h3>.</h3>
                 <div class="circle-container" id="pringles-container">
                     <div class="circle-content">
                         <img src="img/pringle.jpg" alt="Pringles" class="circle-image">
@@ -48,23 +50,21 @@
                     <button id="ruffles-button">Ruffles</button>
                 </div>
             </section>
-        </main>
-        <main id="what" class="main-section">
+        </section>
+        <section id="what" class="main-section">
+            <h2>What are Potato Chips?</h2>
             <section class="intro">
-                <h2>What are Potato Chips?</h2>
-                <p>Potato chips are thin slices of potato that have been deep fried or baked until crunchy. They are
-                    commonly served as a snack, side dish, or appetizer.</p>
+                <h3>Definition</h3>
+                <p>Potato chips are thin slices of potato that have been deep fried or baked until crunchy. They are commonly served as a snack, side dish, or appetizer.</p>
             </section>
 
             <section class="flip-container" id="flip-container-1">
                 <div class="flipper">
                     <div class="front">
-                        <h2>Nutrition Facts</h2>
+                        <h3>Nutrition Facts</h3>
                     </div>
                     <div class="back">
-                        <p>Most traditional snack chips provide between 150 and 200 calories per serving. A single
-                            serving of regular potato chips provides 160 calories, 10 grams of fat, 15 grams of
-                            carbohydrate, and 2 grams of protein.</p>
+                        <p>Most traditional snack chips provide between 150 and 200 calories per serving. A single serving of regular potato chips provides 160 calories, 10 grams of fat, 15 grams of carbohydrate, and 2 grams of protein.</p>
                     </div>
                 </div>
             </section>
@@ -72,17 +72,15 @@
             <section class="flip-container" id="flip-container-2">
                 <div class="flipper">
                     <div class="front">
-                        <h2>History</h2>
+                        <h3>History</h3>
                     </div>
                     <div class="back">
-                        <p>The earliest known recipe for something similar to today's potato chips is in William
-                            Kitchiner's book The Cook's Oracle published in 1817, which was a bestseller in the United
-                            Kingdom and the United States.</p>
+                        <p>The earliest known recipe for something similar to today's potato chips is in William Kitchiner's book The Cook's Oracle published in 1817, which was a bestseller in the United Kingdom and the United States.</p>
                     </div>
                 </div>
             </section>
             <section id="calculator-section">
-                <h2>Calculate Nutrition</h2>
+                <h3>Calculate Nutrition</h3>
                 <form id="nutrition-form" action="#" onsubmit="return false">
                     <label for="chip-type">Choose a type of chip:</label>
                     <select id="chip-type" name="chip-type">
@@ -96,77 +94,49 @@
                 </form>
                 <div id="nutrition-result"></div>
             </section>
-        </main>
-        <main id="history" class="main-section">
+        </section>
+        <section id="history" class="main-section">
+            <h2>Game Section</h2>
             <section class="intro">
-                <h2>Game Section</h2>
-            </section>
-            <section class="content-section">
-                <h2>Details</h2>
-                <p>The evolution and popularity of potato chips over time are remarkable.</p>
+                <h3>Game Introduction</h3>
             </section>
             <section id="gameSection">
-                <h2>Pringles Stacker Game</h2>
+                <h3>Pringles Stacker Game</h3>
                 <div id="gameContainer">
                     <canvas id="gameCanvas"></canvas>
                     <div id="score">Score: 0</div>
                 </div>
             </section>
-        </main>
+        </section>
         <div id="content-container" style="display:none;">
-            <div class="content-image">
-                <img id="content-image" src="" alt="Pringles Image">
-            </div>
             <div id="pringles" class="content-section">
                 <h2>Pringles</h2>
-                <p>Pringles is an American brand of stackable potato-based chips invented by Procter & Gamble (P&G) in
-                    1968 and marketed as "Pringle's Newfangled Potato Chips". It is technically considered an extruded
-                    snack because of the manufacturing process. The brand was sold in 2012 to Kellogg's.</p>
-                <p>As of 2011, Pringles were sold in more than 140 countries. In 2012, Pringles were the fourth most
-                    popular snack brand after Lay's, Doritos, and Cheetos (all manufactured by Frito-Lay), with 2.2%
-                    market share globally.</p>
+                <p>Pringles is an American brand of stackable potato-based chips invented by Procter & Gamble (P&G) in 1968 and marketed as "Pringle's Newfangled Potato Chips". It is technically considered an extruded snack because of the manufacturing process. The brand was sold in 2012 to Kellogg's.</p>
+                <p>As of 2011, Pringles were sold in more than 140 countries. In 2012, Pringles were the fourth most popular snack brand after Lay's, Doritos, and Cheetos (all manufactured by Frito-Lay), with 2.2% market share globally.</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/UE9mnBDke1U" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/UE9mnBDke1U" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <p>For more information, visit the <a href="https://www.pringles.com/en-us/home.html"
-                        target="_blank">official Pringles website</a>.</p>
+                <p>For more information, visit the <a href="https://www.pringles.com/en-us/home.html" target="_blank">official Pringles website</a>.</p>
             </div>
             <div id="lays" class="content-section">
                 <h2>Lays</h2>
-                <p>Lays is one of the oldest potato chip brands, known for their classic, crispy taste and a variety of
-                    flavors.</p>
-                <p>Every bag of Lay's Potato Chips in the US is made from their very own chip-perfecting potatoes grown
-                    on over 100 farms across the US and a handful in Canada.</p>
-                <p>Lays uses real potatoes, high-quality oils, and a touch of salt to create their deliciously crunchy
-                    chips. They are committed to using the best ingredients to ensure a satisfying snacking experience.
-                </p>
+                <p>Lays is one of the oldest potato chip brands, known for their classic, crispy taste and a variety of flavors.</p>
+                <p>Every bag of Lay's Potato Chips in the US is made from their very own chip-perfecting potatoes grown on over 100 farms across the US and a handful in Canada.</p>
+                <p>Lays uses real potatoes, high-quality oils, and a touch of salt to create their deliciously crunchy chips. They are committed to using the best ingredients to ensure a satisfying snacking experience.</p>
                 <div class="video-container">
-                    <iframe src="https://www.youtube.com/embed/qWTFkgnTYkE" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/qWTFkgnTYkE" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <p>For more information, visit the <a href="https://www.lays.com" target="_blank">official Lays
-                        website</a>.</p>
+                <p>For more information, visit the <a href="https://www.lays.com" target="_blank">official Lays website</a>.</p>
             </div>
             <div id="ruffles" class="content-section">
                 <h2>Ruffles</h2>
                 <p>Ruffles is a brand of ridged potato chips known for their thick texture and strong flavor.</p>
-                <p>It is an American brand of crinkle-cut potato chips. The Frito Company acquired the rights to Ruffles
-                    brand potato chips in 1958 from its creator, Bernhardt Stahmer, who had adopted the trademark on May
-                    11th, 1948.</p>
-                <p>Ruffles are produced in a variety of flavors and presentations in addition to traditional potato chip
-                    flavors, although some of these variants are produced exclusively for regional markets. Existing
-                    varieties include: sour cream & onion, cheddar & sour cream, cheese, barbecue, salt & vinegar, cream
-                    cheese, and hot wings.</p>
+                <p>It is an American brand of crinkle-cut potato chips. The Frito Company acquired the rights to Ruffles brand potato chips in 1958 from its creator, Bernhardt Stahmer, who had adopted the trademark on May 11th, 1948.</p>
+                <p>Ruffles are produced in a variety of flavors and presentations in addition to traditional potato chip flavors, although some of these variants are produced exclusively for regional markets. Existing varieties include: sour cream & onion, cheddar & sour cream, cheese, barbecue, salt & vinegar, cream cheese, and hot wings.</p>
                 <div class="video-container">
-                    <iframe src="https://youtube.com/embed/0iFi6UPbIdY" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <iframe src="https://youtube.com/embed/0iFi6UPbIdY" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <p>For more information, visit the <a href="https://www.ruffles.com" target="_blank">official Ruffles
-                        website</a>.</p>
+                <p>For more information, visit the <a href="https://www.ruffles.com" target="_blank">official Ruffles website</a>.</p>
             </div>
         </div>
     </div>
