--- a/webdeva2/index.html
+++ b/webdeva2/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
 </head>
-
 <body>
     <header>
         <div class="header-content">
@@ -24,13 +22,13 @@
     </nav>
     <div id="main-container">
         <section id="types" class="main-section">
-            <h2>.</h2>
+            <h2>Types and Varieties</h2>
             <section class="intro">
                 <h3>Different types of Potato Chips</h3>
                 <p>Learn more about the variety of Potato Chips in the world</p>
             </section>
             <section class="image-circles">
-                <h3>.</h3>
+                <h3>Popular Brands</h3>
                 <div class="circle-container" id="pringles-container">
                     <div class="circle-content">
                         <img src="img/pringle.jpg" alt="Pringles" class="circle-image">
@@ -57,7 +55,6 @@
                 <h3>Definition</h3>
                 <p>Potato chips are thin slices of potato that have been deep fried or baked until crunchy. They are commonly served as a snack, side dish, or appetizer.</p>
             </section>
-
             <section class="flip-container" id="flip-container-1">
                 <div class="flipper">
                     <div class="front">
@@ -68,7 +65,6 @@
                     </div>
                 </div>
             </section>
-
             <section class="flip-container" id="flip-container-2">
                 <div class="flipper">
                     <div class="front">
@@ -98,10 +94,10 @@
         <section id="history" class="main-section">
             <h2>Game Section</h2>
             <section class="intro">
-                <h3>Game Introduction</h3>
+                <h3>Pringles Stacker Game</h3>
             </section>
             <section id="gameSection">
-                <h3>Pringles Stacker Game</h3>
+                <h3>Game Area</h3>
                 <div id="gameContainer">
                     <canvas id="gameCanvas"></canvas>
                     <div id="score">Score: 0</div>
@@ -142,5 +138,4 @@
     </div>
     <button id="back-button" style="display:none;">Back</button>
 </body>
-
 </html>
