--- a/webdeva2/index.html
+++ b/webdeva2/index.html
@@ -11,6 +11,7 @@
     <header>
         <div class="header-content">
             <h1>Interesting Facts about Potato Chips</h1>
+            <img src="img/QRCode.jpg" alt="QR Code" class="qr-code">
         </div>
     </header>
     <nav>
